# KQuickView

./: .gitignore  .qmlls.ini  Cargo.toml  README.md  build.rs  instalar_servicio.sh  install.sh  kquickview-app.desktop  kquickview-selected.sh  kquickview.desktop  prueba.txt
ReceptorIpCom/: receptor
qml/: ImageViewer.qml  MarkdownViewer.qml  PdfViewer.qml  TextViewer.qml  main.qml
src/: bridge.rs  config.rs  crypto.rs  database.rs  main.rs  models.rs
