[package]
name = "kquickview"
version = "0.5.1"
edition = "2024"

[dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
mime_guess = "2.0"
pulldown-cmark = "0.10"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
